--- a/Topic Modeling.ipynb
+++ b/Topic Modeling.ipynb
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "b9608944",
+   "id": "b118f57b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,9 @@
    "source": [
     "Q: What do the two data frames `count_text_vectors` and `tfidf_text_vectors` hold? \n",
     "\n",
-    "A: "
+    "A: count text vector is as its name states a vector of word counts. this vector transforms the df[text] into a numerical representation. This vector ignores stopwords, sets a min of word repetition of 5, and a maximum fraction of a word appearing.\n",
+    "\n",
+    "While tfidf_text_vectors performs a similar task of turning the df[text] column into a numerical representation but using the TF-IDF technique. This technique in other words takes each word and assigns a weight depending on how often it shows in the document (TF term frequency and IDF inverse document frequency).\n"
    ]
   },
   {
@@ -423,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "2d1a1f7c",
+   "id": "53e740fb",
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "94347b74",
+   "id": "84c398bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "bc49381f",
+   "id": "3d146f0a",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "e681e950",
+   "id": "84952014",
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c5d4c01",
+   "id": "294e0d00",
    "metadata": {},
    "outputs": [],
    "source": []
